# Useful

./: .gitignore  .readthedocs.yaml  README.md  install_i18n.py  main.py  mkdocs.yml  pyproject.toml  quick_test.py  requirements.txt  setup_i18n.bat  setup_i18n.sh  test_i18n.py
ai/: compress.py  convert.py  sky-t1.md
astro/nina/: touch_n_star.md
astro/siril/: python.md  script.md
c/: Day11 - 随机数.md  Day7 - 结构体与联合体.md  Day9 - 文件操作.md
cpp/ctad/: ctad.md
cpp/noob/: class-constructor.md  inline.md  new.md  ref.md  string.md
cpp/type_erasure/: c11_generic.md  c_virtual_table.md  cpp.md  cpp_virtual_table.md  variant.md
csharp/: tcp.md
docs/: i18n-setup.md  i18n-setup.zh.md  index.md  index.zh.md
docs/ai/: building-effective-agents.md  index.md  index.zh.md  sky-t1.md  sky-t1.zh.md
docs/ai/daily/: 8.15.md  8.15.zh.md  8.16.md  8.16.zh.md  8.17.md  8.17.zh.md  index.md  index.zh.md
docs/astronomy/: index.md  index.zh.md
docs/creative/: index.md  index.zh.md  quantum-entanglement.md  quantum-entanglement.zh.md  three-day-war.md  wave-function-collapse.md
docs/libraries/: index.md  index.zh.md  scnlib.md
docs/linux/: index.md  index.zh.md
docs/programming/: index.md  index.zh.md
linux/tools/: grep.md
novel/: 三日之战.md
python/: auto_wifi.py
site/: 404.html  index.html  sitemap.xml
site/ai/: index.html
site/astronomy/: index.html
site/creative/: index.html
site/libraries/: index.html
site/linux/: index.html
site/programming/: index.html
site/search/: search_index.json
tools/: README.md  README.zh.md  crawl.py
(+264 files in other folders)
