[project]
name = "useful-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mkdocs>=1.5.0",
    "mkdocs-awesome-pages-plugin>=2.8.0",
    "mkdocs-git-revision-date-localized-plugin>=1.2.0",
    "mkdocs-material>=9.0.0",
    "mkdocs-mermaid2-plugin>=1.2.1",
    "mkdocs-minify-plugin>=0.7.0",
    "mkdocs-static-i18n>=1.0.0",
    "pymdown-extensions>=10.0.0",
]

[[tool.uv.index]]
url = "https://mirrors.aliyun.com/pypi/simple/"
default = true
